[package]
name = "testproxy"
description = "Tool for end-to-end testing of proxy servers"
repository = "https://github.com/sonertari/TestProxy"
homepage = "https://github.com/sonertari/TestProxy"
version = "0.0.1"
authors = ["Soner Tari <sonertari@gmail.com>"]
keywords = ["testproxy", "testing", "proxy", "end-to-end"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
license = "GPL-3.0"
#edition = "2019"

[dependencies]
openssl-probe = "0.1.2"
openssl = { version = "0.10.22", features = ["vendored"] }
structopt = "0.2.15"
time = "0.1.42"
colored = "1.7.0"
log = "0.4.6"
fern = { version = "0.5.8", features = ["colored"] }
serde_json = "1.0.39"
serde = {version = "1.0.90", features = ["derive"] }
chrono = "0.4.7"
regex = "1.1.7"

[badges]
travis-ci = { repository = "sonertari/TestProxy", branch = "master" }
maintenance = { status = "passively-maintained" }

[profile.release]
lto = true